plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.0.0'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'pjwstk.s20124'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = "19.PREVIEW"

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

tasks.named("compileJava") {
    options.compilerArgs.add("--enable-preview")
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security.oauth:spring-security-oauth2:2.5.2.RELEASE'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'
    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    providedRuntime 'io.jsonwebtoken:jjwt-jackson:0.11.2'
    providedRuntime 'io.jsonwebtoken:jjwt-impl:0.11.2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
    jvmArgs("--enable-preview")
}
